fix z-indexes

--- a/community/ui/community-highlighter/community-highlighter.module.scss
+++ b/community/ui/community-highlighter/community-highlighter.module.scss
@@ -21,10 +21,3 @@
     display: none;
   }
 }
-
-.container {
-  > * {
-    // TODO - fix sidebar z-index
-    z-index: 1000000;
-  }
-}
